setup and generation almost working

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ Container starts here
     <script src="js/block.js"></script>
     <script src="js/voxelstructure.js"> </script>
     <script src="js/puzzlegenerator.js"> </script>
+    <script src="js/puzzletraverse.js"> </script>
     <script src="js/header3d.js"></script>
     
 </body>
