animated path as quads

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ Container starts here
 
 
     <script src="js/three.min.js"></script>
+    <script src="js/Tween.js"></script>
     <script src="js/block.js"></script>
     <script src="js/voxelstructure.js"> </script>
     <script src="js/puzzlegenerator.js"> </script>
